turtleart.lessons.turtleart.Main.Square.scala.error
Source:3: error: not found: type Nul
	def cote(i : Int) : Nul = {
                            ^